# statismo-build-examples

./: README.md
ITK/: CMakeLists.txt
VTK/: CMakeLists.txt
